infra/k8s/comments.yaml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: comments
  labels: 
    app: comments

spec: 
  replicas: 1
  selector: 
    matchLabels: 
      app: comments
  template: 
    metadata: 
      labels: 
        app: comments
    spec: 
      containers: 
      - name: comments
        image: anupam31/blogcomment
        # ports: 
        # - containerPort: 27017
---

apiVersion: v1

kind: Service

metadata: 
  name: blogcomment-serv

spec: 
  selector: 
    app: comments
  ports: 
  - protocol: TCP
    port: 4002
    targetPort: 4002
