infra/k8s/eventbus.yaml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: eventbus
  labels: 
    app: eventbus

spec: 
  replicas: 1
  selector: 
    matchLabels: 
      app: eventbus
  template: 
    metadata: 
      labels: 
        app: eventbus
    spec: 
      containers: 
      - name: eventbus
        image: anupam31/eventbus
        # ports: 
        # - containerPort: 27017
---

apiVersion: v1

kind: Service

metadata: 
  name: eventbus-serv

spec: 
  selector: 
    app: eventbus
  ports: 
  - protocol: TCP
    port: 4005
    targetPort: 4005
