infra/k8s/posts.yaml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: posts
  labels: 
    app: posts

spec: 
  replicas: 1
  selector: 
    matchLabels: 
      app: posts
  template: 
    metadata: 
      labels: 
        app: posts
    spec: 
      containers: 
      - name: posts
        image: anupam31/blogpost
        # ports: 
        # - containerPort: 27017
---

apiVersion: v1

kind: Service

metadata: 
  name: blogpost-serv

spec: 
  selector: 
    app: posts
  ports: 
  - protocol: TCP
    port: 4001
    targetPort: 4001
