infra/k8s/ui.yaml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: ui-deployment
  labels: 
    app: ui

spec: 
  replicas: 1
  selector: 
    matchLabels: 
      app: ui
  template: 
    metadata: 
      labels: 
        app: ui
    spec: 
      containers: 
      - name: ui
        image: anupam31/anupblogexample
        ports: 
        - containerPort: 3000

---

apiVersion: v1

kind: Service

metadata: 
  name: ui-serv

spec: 
  selector: 
    app: ui

  ports: 
  - protocol: TCP
    port: 3000
    targetPort: 3000
    # nodePort: 30002
